feature: add endpoint to get all tasks by user
